simpleSlideShow/sam-sam2/base/route-fotoshow.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fotoshow
  namespace: group-7-kabir
  labels:
    app: fotoshow
    app.kubernetes.io/component: fotoshow
    app.kubernetes.io/instance: fotoshow
    app.kubernetes.io/name: fotoshow
  annotations: {}
spec:
  host: fotoshow-sam-sam-showcase.apps.inholland-minor.openshift.eu
  to:
    kind: Service
    name: fotoshow
    weight: 100
  port:
    targetPort: 18181-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
